--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <link href="https://cdn.bootcss.com/quill/1.3.4/quill.core.min.css" rel="stylesheet">
+      <link href="https://cdn.bootcss.com/quill/1.3.4/quill.snow.min.css" rel="stylesheet">
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/axios@0.25.0/dist/axios.min.js"></script>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/axios@0.25.0/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sprintf-js@1.1.1/src/sprintf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/blueimp-md5@2.10.0/js/md5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script src="https://cdn.bootcss.com/quill/1.3.6/quill.min.js"></script>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
